2000-06-02 02:54 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * include/hbver.h
   * doc/whatsnew.doc
     * Bumped version to 0.34 and date to 2000-06-02

2000-06-01 22:18 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/lang/msgcswin.c
   * source/lang/msghr852.c
   * source/lang/msghriso.c
   * source/lang/Makefile
   * makefile.bc
   * makefile.vc
     + New language modules added.

   * source/rtl/philes.c
     + HB_EXTENSION guards added to HB_FEOF()

   * bin/bld.cmd
     ! HB_LIB_... fixed to HB_INC_...

   * contrib/samples/date.c 
   * contrib/samples/dbf.c
     % Some optimizations.

2000-06-01 15:35 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rtl/dates.c
     - Removed sys/timeb.h, because it is not needed.

   * source/rtl/filesys.c
     + Added OS_UNIX_COMPATIBLE to the __CYGWIN__ code for hb_fsEof()

   * source/rtl/gtdos/gtdos.c
     + Added #defines to allow video modes to compile with __RSX32__

20000601-20:40 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/dates.c
	* OS_UNIX_COMPATIBLE is defined in file included from hbapi.h
	then it cannot be checked before inclusion of hbapi.h
	
    *source/rtl/filesys.c
	* fixed hb_fsEof() for U*ix platforms
    
2000-06-01 12:15 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * doc/en/file.txt
     + Added documentation for HB_FEOF( nHandle )

   * source/rtl/filesys.c
     + Added implementation of hb_fsEof() for defined(__CYGWIN__).

   * source/rtl/philes.c
     + Added Harbour wrapper HB_FEOF( nHandle ) for hb_fsEof().

   * source/rtl/gtos2/gtos2.c
     ! Bug fix that should allow video mode changes to work
       in full screen mode as well as in windowed mode.

20000531-23:20 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
*bin/bld.bat
    *changed HB_LIB_INSTALL to HB_INC_INSTALL on harbour /i command line
     switch
+doc/en/eval.txt
    *Documentation for Eval() function
*doc/en/set.txt
     +Document for SET BELL command
*doc/en/string.txt