@@ -4,6 +4,15 @@
    * doc/whatsnew.doc
      * Bumped version to 0.34 and date to 2000-06-02
 
+   * source/rtl/filesys.c
+     ! hb_fsEof() fixed for DJGPP.
+
+   * include/Makefile
+     - hbapiext.h removed
+
+   * source/compiler/harbour.c
+     ! Fixed GCC -O2 warning. 
+
 2000-06-01 22:18 UTC+0100 Victor Szakats <info@szelvesz.hu>
 
    * source/lang/msgcswin.c
